checked on raspberry pi

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -196,7 +196,7 @@ jobs:
     runs-on: ubuntu-latest
     if:   github.event_name == 'release' && github.event.action == 'created'
     needs:
-      # - test-on-hardware-raspberry-pi-4
+      - test-on-hardware-raspberry-pi-4
       # - test-on-hardware-jetson-nano
       # - test-on-hardware-ubuntu
       - test-on-hardware-win10
